# NexusPacketInspector

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/analysis/: conversations.rs  mod.rs  statistics.rs
src-tauri/src/commands/: file.rs  filter.rs  mod.rs  plugin.rs
src-tauri/src/parser/: dissector.rs  mod.rs  packet.rs  pcap_reader.rs  stream_tracker.rs
src-tauri/src/plugins/: mod.rs  registry.rs  traits.rs
src-tauri/src/plugins/nmap/: mod.rs  parser.rs  plugin.rs  profiles.rs  types.rs
src-tauri/src/plugins/tshark/: mod.rs  modes.rs  parser.rs  plugin.rs  types.rs
src/components/layout/: Header.tsx  MobileWarning.tsx  NavTabs.tsx  SettingsPanel.tsx  StatusBar.tsx
src/components/shared/: DraggablePanel.tsx  EmptyState.tsx  HexDumpPanel.tsx  HexStrip.tsx  HexViewer.tsx  NexusLogo.tsx  PacketSidebar.tsx
src/data/: fieldEncyclopedia.ts
src/hooks/: useContainerSize.ts  useDemoCapture.ts  useFilteredPackets.ts  usePacketStore.ts  usePluginEvents.ts  usePluginStore.ts  useTauriCapture.ts
src/lib/: constants.ts  demo-mode.ts  fieldByteOffsets.ts  formatters.ts  protocol-templates.ts  stream-reassembly.ts  tauri-bridge.ts
src/lib/__tests__/: demo-mode.test.ts  protocol-templates.test.ts  stream-reassembly.test.ts
src/styles/: components.ts  globalStyles.ts  theme.ts  typography.ts
src/types/: packet.ts  plugin.ts  statistics.ts  stream.ts
(+27 files in other folders)
