[package]
name = "nexus-inspector"
version = "0.1.0"
edition = "2021"
description = "A high-performance PCAP network packet analyzer"
authors = ["magicman <mimsec-contact@mimsec.com>"]
license = "MIT"

[lib]
name = "nexus_inspector_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap-parser = "0.16"
etherparse = "0.16"
memmap2 = "0.9"
rayon = "1.10"
parking_lot = "0.12"
tokio = { version = "1", features = ["process", "sync", "rt", "macros"] }
tokio-util = "0.7"
async-trait = "0.1"
quick-xml = "0.31"

[features]
custom-protocol = ["tauri/custom-protocol"]
